Initial clean commit (no binaries)

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,10 @@
-# SmartBus ignores 
-
-
-# Python cache
-__pycache__/
-*.pyc
-*.pyo
-
-# Virtual env
-.venv/
-env/
-
-# Build and installer outputs
 build/
 dist/
-*.spec
 output/
-
-# Local configs
+*.spec
+*.exe
+__pycache__/
+*.pyc
+.venv/
 .env
-
+tickets/*.pdf
